Added Continue Watching section
